fix: 🐛 crepe slash menu and toolbar z-index

--- a/packages/crepe/src/theme/common/block-edit.css
+++ b/packages/crepe/src/theme/common/block-edit.css
@@ -39,6 +39,7 @@
       display: none;
     }
     position: absolute;
+    z-index: 10;
     display: block;
     font-family: var(--crepe-font-default);
     color: var(--crepe-color-on-surface);
